--- a/src/App.css
+++ b/src/App.css
@@ -407,7 +407,7 @@ html {
   font-family: "Poppins", sans-serif !important;
   position: relative;
   list-style: none;
-  /* padding: 6px 12px 6px 0 !important; */
+  padding: 0 !important;
   cursor: pointer;
 }
 .react-tabs__tab--selected {
